# Aeronautical-viability-checker

./: Cargo.toml  README.md
data/: altitudeDensity.csv
src/: main.rs
src/cli/: mod.rs
src/ml_coefficients_estimator/: mod.rs
src/ml_coefficients_estimator/drag_coeff_estimator/: mod.rs
src/ml_coefficients_estimator/lift_coeff_estimator/: mod.rs
src/viable/: mod.rs
src/viable/air_density/: mod.rs
src/viable/drag/: mod.rs
src/viable/lift/: mod.rs
src/viable/thrust/: mod.rs
src/viable/weight/: mod.rs
