[package]
name = "aeronautical-viability-checker"
version = "0.0.1"
authors = ["Tom Hardern - https://github.com/FeynmanTesla"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
randomforest = "0.1.6"
stl_io = "0.4.2"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3